Fix layout issue

--- a/layouts/showLayout.module.scss
+++ b/layouts/showLayout.module.scss
@@ -1,2 +1,3 @@
-.page {
+.main {
+  height: $min-main-height;
 }
